--- a/Q/Styles.css
+++ b/Q/Styles.css
@@ -44,83 +44,75 @@
       +
 
 */
+
+
+
+
 .qjs-circuit {
 
+	margin: 20px 0;
 	position: relative;
-
-	/*border: 1px solid black;*/
-/*	--bandwidth: 3;
-	--timewidth: 5;
-	width:  calc( var( --timewidth ) * 10rem );
-	height: calc( var( --bandwidth ) * 10rem );
-*/	max-width: 100%;
-	overflow: visible;
+	max-width: 100%;
+	/*overflow: hidden;*/
 	cursor: crosshair;
-
 	font-family: var( --font-family-sans );
 	font-style: italic;
 	color: var( --color-titanium );
-
 	font-size:   1.0rem;
 	line-height: 2.5rem;
 }
+.qjs-circuit-layer {
 
-.qjs-circuit-background-layer {
-
-	display: grid;
-	
+	display: grid;	
 	grid-auto-rows:     60px;
 	grid-auto-columns:  60px;
-	position: relative;
+	position: absolute;
 	top:  0;
 	left: 0;
 	width:  100%;
 	height: 100%;
-	/*background-color: rgba( 255, 0, 0, 0.1 );*/
-}
-.qjs-circuit-wire {
-
-	grid-column-start: 3;
-	grid-column-end: 6;
-	/*background-color: rgba( 255, 0, 0, 0.1 );*/
-}
-#qjs-circuit-wire rect {
-
-	/*width: 100%;*/
-}
-
-
-
-
-.qjs-circuit-connections-layer,
-.qjs-circuit-grabables-layer {
-
-	display: grid;
-	grid-auto-rows:     60px;
-	grid-auto-columns:  60px;
-
-	position: absolute;
-	top:  0;
-	left: 0;
-	/*justify-content: center;
-	align-items: center;*/
 	text-align: center;
 }
-.qjs-circuit-connections-layer div {
+.qjs-circuit-layer > div, .qjs-circuit-layer > svg { 
 
-	width:   60px;
-	height: 120px;
+	width:  60px;
+	height: 60px;
 }
-.qjs-circuit-grabables-layer div {
+.qjs-circuit-layer-wires {
+
+	position: relative;
+}
+
+
+
+.qjs-circuit-layer-connections {
+
+	top: 30px;
+}
+.qjs-circuit-layer-connections div {
 
 	width:   60px;
-	height:  60px;
+	height: auto;
+}
+.qjs-circuit-layer-connections svg {
+
+	width:  100%;
+	height: 100%;
+}
+.qjs-circuit-layer-identities svg,
+.qjs-circuit-layer-grabbables div {
+
 	padding: 10px;
 }
-.qjs-circuit-grabables-layer div:hover {
+.qjs-circuit-layer-grabbables div:hover {
 
 	color: black;
 }
+
+
+
+
+
 
 
 
@@ -169,9 +161,8 @@
 
 	fill: var( --color-white );
 }
-#qjs-circuit-control-straight,
-#qjs-circuit-control-curved,
-#qjs-circuit-gate-control,
+
+#qjs-circuit-gate-controller,
 #qjs-circuit-gate-controlled {
 
 	fill: var( --color-blue );
@@ -191,22 +182,33 @@ svg .qjs-circuit-gate {
 	fill: var( --color-green );
 	cursor: move;
 }
-svg #qjs-circuit-gate-identity {
+#qjs-circuit-gate-identity {
 
 	fill: var( --color-titanium );
 	cursor: inherit;
 }
+use.qjs-circuit-gate-identity {
+
+	opacity: 0;
+	transition-property: opacity;
+	transition-duration: 0.5s;
+}
+.qjs-circuit:hover use.qjs-circuit-gate-identity {
+
+	opacity: 1;
+	transition-duration: 0.1s;
+}
 
 
 
+#qjs-circuit-control-straight,
+#qjs-circuit-control-curved {
+
+	fill: none;
+	stroke: var( --color-blue );
+	stroke-width: 2;
+	stroke-miterlimit: 10;
+}
 
 
-
-/*
-
-
-	These are the styles necessary for interactive circuit diagrams.
-
-
-*/
 
