--- a/Q/Styles.css
+++ b/Q/Styles.css
@@ -3,12 +3,16 @@
 	Copyright © 2019, Stewart Smith. See LICENSE for details.
 
 */
+@charset "utf-8";
 
 
 
 
+:root {
 
-
+	--z-index-gate: 50;
+	--z-index-gate-identity: 40;
+}
 
 
 /*
@@ -48,7 +52,7 @@
 
 
 
-.qjs-circuit {
+.qjs-circuit, .qjs-circuit-palette {
 
 	margin: 20px 0;
 	position: relative;
@@ -61,6 +65,14 @@
 	font-size:   1.0rem;
 	line-height: 2.5rem;
 }
+.qjs-circuit-palette {
+
+	min-height: 60px;
+}
+
+
+
+
 .qjs-circuit-layer {
 
 	display: grid;	
@@ -82,9 +94,6 @@
 
 	position: relative;
 }
-
-
-
 .qjs-circuit-layer-connections {
 
 	top: 30px;
@@ -99,7 +108,6 @@
 	width:  100%;
 	height: 100%;
 }
-.qjs-circuit-layer-identities svg,
 .qjs-circuit-layer-grabbables div {
 
 	padding: 10px;
@@ -112,41 +120,40 @@
 
 
 
+.qjs-circuit-menu,
+.qjs-circuit-moment,
+.qjs-circuit-register {
 
-
-
-
-.qjs-circuit-menu  {
-
-	grid-row:    1;
-	grid-column: 1;
-	border-top-left-radius: 1rem;
 	background-color: var( --color-chalk );
+}
+.qjs-circuit-menu  {
+	
+	grid-row: 1;
+	grid-column-start: 1;
+	grid-column-end:   3;
+	min-height: 100%;
+	min-width:  100%;
+	border-top-left-radius: 1rem;
 }
 .qjs-circuit-moment {
 
 	grid-row: 1;
-	width:  100%;
-	height: 100%;
-	background-color: var( --color-chalk );
-	color: var( --color-titanium );
 	cursor: ew-resize;
 }
-.qjs-circuit-qubit {
+.qjs-circuit-register {
 
 	grid-column: 1;
-	background-color: var( --color-chalk );
 	cursor: ns-resize;
 }
 .qjs-circuit-input {
 
+	padding-left:  0;
+	padding-right: 0;
 	grid-column: 2;
-	width:  100%;
+	font-family: var( --font-family-mono );	
 	font-weight: bold;
-	font-family: var( --font-family-mono );
 	font-size: 1.5rem
 }
-
 
 
 
@@ -173,14 +180,20 @@
 }
 .qjs-circuit-gate {
 
+	position: relative;
 	width:  40px;
 	height: 40px;
 	display: inline-block;
+	z-index: var( --z-index-gate );
 }
 svg .qjs-circuit-gate {
 
 	fill: var( --color-green );
 	cursor: move;
+}
+.qjs-circuit-gate-identity {
+
+	z-index: var( --z-index-gate-identity );
 }
 #qjs-circuit-gate-identity {
 
@@ -211,4 +224,22 @@ use.qjs-circuit-gate-identity {
 }
 
 
+
+
+.qjs-circuit-highlight {
+
+	/*background-color: var( --color-yellow );	*/
+	color: black;
+}
+.qjs-circuit-register.qjs-circuit-highlight,
+.qjs-circuit-input.qjs-circuit-highlight,
+.qjs-circuit-moment.qjs-circuit-highlight,
+.qjs-circuit-wire.qjs-circuit-highlight {
+
+	background-color: var( --color-yellow );
+}
+.qjs-circuit-wire.qjs-circuit-highlight {
+
+	/*fill: black;*/
+}
 
