--- a/source/Q.Circuit.Editor.css
+++ b/source/Q.Circuit.Editor.css
@@ -1,6 +1,6 @@
 /*
 
-	Copyright © 2019, Stewart Smith. See LICENSE for details.
+	Copyright © 2019–2020, Stewart Smith. See LICENSE for details.
 
 */
 @charset "utf-8";
@@ -299,8 +299,8 @@ svg.qjs-circuit-wire {
 	fill: var( --color-charcoal );
 	/*fill: var( --color-red );*/
 }
-#qjs-circuit-operation-controller,
-#qjs-circuit-operation-controlled {
+#qjs-circuit-operation-control,
+#qjs-circuit-operation-target {
 
 	fill: var( --color-charcoal );
 	/*fill: var( --color-blue );*/
@@ -389,6 +389,39 @@ svg.qjs-circuit-wire {
 
 
 
+
+
+
+.qjs-circuit-text-input {
+
+	/*min-width:  18rem;*/
+	width: 100%;
+	min-height: 12rem;
+	/*margin:  1rem 0 2rem 0;*/
+	margin:  1rem 0 0 0;
+	border: 1px solid var( --color-blue );
+	border-radius: 0.5rem;	
+	background-color: var( --color-chalk );
+	padding: 1rem 0 0 2rem;
+	color: var( --color-blue );
+	font-family: var( --font-family-mono );
+	font-size:   1.0rem;
+	line-height: 1.3rem;
+	white-space: pre;
+	word-wrap: normal;/*  OMFG, iOS you make me sad.  */
+
+}
+.qjs-button {
+
+	border-radius: 0.5rem;
+	background-color: var( --color-blue );
+	color: var( --color-white );
+	padding: 0.8rem 1.8rem;
+	font-family: var( --font-family-sans );
+	font-size:   1.2rem;
+	line-height: 2.0rem;
+	cursor: pointer;
+}
 
 
 
